Link arquivo CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html1>
     <head>
         <title>Meu Site</title>
+        <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
         <h1>Aprendendo Github</h1>
