--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
-        <h1>Aprendendo Github</h1>
+        <h1>golden hour</h1>
+        <h2>partitura de quatro mãos:</h2>
     </body>
 </html1>
