--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>golden hour</h1>
         <h2>partitura de quatro mãos:</h2>
-        <img src="blob:https://web.whatsapp.com/6b67e564-1ae9-4312-918c-6d8849a3c2eb"
+        <img src="https://musescore.com/static/musescore/scoredata/g/83b653b24bca9c7c2a3015ffdf7e14dd002fe029/score_0.svg?no-cache=1707734100">
     </body>
 </html1>
