--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>golden hour</h1>
         <h2>partitura de quatro mãos:</h2>
-        <img src="https://musescore.com/static/musescore/scoredata/g/83b653b24bca9c7c2a3015ffdf7e14dd002fe029/score_0.svg?no-cache=1707734100">
+    <img src="https://musescore.com/static/musescore/scoredata/g/83b653b24bca9c7c2a3015ffdf7e14dd002fe029/score_0.svg?no-cache=1707734100"> <widht="30">
     </body>
 </html1>
